# 01-rcli

./: Cargo.toml  README.md  STUDY_NOTES.md  b64.txt  cliff.toml  deny.toml  output.toml
src/: cli.rs  lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs
